<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="16dp"
      android:background="@color/blue"

      tools:context=".java.MainActivity">

    <EditText
        android:id="@+id/field_vpa"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:textColor="@color/black"
        android:padding="10dp"
        android:textColorHint="@color/black"
        android:background="@drawable/edittext_round"
        android:hint="@string/vpa_enter_upi" />

    <EditText
        android:id="@+id/field_name"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:textColorHint="@color/black"
        android:background="@drawable/edittext_round"
        android:hint="@string/payee_name" />

    <EditText
        android:id="@+id/field_payee_merchant_code"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:background="@drawable/edittext_round"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:textColorHint="@color/black"
        android:hint="@string/payee_merchant_code_4_digit_code" />

    <EditText
        android:id="@+id/field_transaction_id"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:background="@drawable/edittext_round"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:textColorHint="@color/black"
        android:hint="@string/transaction_id" />

    <EditText
        android:id="@+id/field_transaction_ref_id"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:textColor="@color/black"
        android:padding="10dp"
        android:textColorHint="@color/black"
        android:layout_marginTop="5dp"
        android:background="@drawable/edittext_round"
        android:hint="@string/transaction_ref_id" />

    <EditText
        android:id="@+id/field_description"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:textColor="@color/black"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:textColorHint="@color/black"
        android:background="@drawable/edittext_round"
        android:hint="@string/description" />

    <EditText
        android:id="@+id/field_amount"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:padding="10dp"
        android:textColorHint="@color/black"
        android:background="@drawable/edittext_round"
        android:hint="@string/amount_xx_xx" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/upi_app"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radioAppChoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <RadioButton
          android:id="@+id/app_default"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:checked="true"
          android:textColor="@color/white"
          android:text="Default" />

      <RadioButton
          android:id="@+id/app_amazonpay"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="@color/white"
          android:text="@string/amazonpay" />

      <RadioButton
          android:id="@+id/app_bhim_upi"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="@color/white"
          android:text="@string/bhim_upi" />

      <RadioButton
          android:id="@+id/app_google_pay"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="@color/white"
          android:text="@string/google_pay" />

      <RadioButton
          android:id="@+id/app_phonepe"
          android:layout_width="wrap_content"
          android:textColor="@color/white"
          android:layout_height="wrap_content"
          android:text="@string/phonepe" />

      <RadioButton
          android:id="@+id/app_paytm"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="@color/white"
          android:text="@string/paytm" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_pay"
        android:layout_width="364dp"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:background="@drawable/button_round1"
        android:text="@string/pay_with_upi" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/textView_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/click_above_button_to_pay"
        android:textColor="@color/white"
        android:textSize="19sp" />
  </LinearLayout>
</ScrollView>