<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShopekeeperRegsiterActivity"
    android:background="@color/blue"
    >


  <EditText
      android:id="@+id/ShopName"
      android:layout_width="167dp"
      android:layout_height="50dp"
      android:autofillHints=""
      android:textColorHint="@color/black"
      android:textColor="@color/black"
      android:background="@drawable/edittext_round"
      android:ems="10"
      android:hint="@string/shopname"
      android:inputType="textPersonName"
      android:paddingStart="10dp"
      android:paddingEnd="2dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.139"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.108" />

  <EditText
      android:id="@+id/ShopKeeperName"
      android:layout_width="176dp"
      android:layout_height="51dp"
      android:autofillHints=""
      android:background="@drawable/edittext_round"
      android:ems="10"
      android:textColor="@color/black"
      android:textColorHint="@color/black"
      android:hint="@string/shopkeepername"
      android:inputType="textPersonName"
      android:paddingStart="10dp"
      android:paddingEnd="2dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.902"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.107" />

  <EditText
      android:id="@+id/LicenseNumber"
      android:layout_width="354dp"
      android:layout_height="52dp"
      android:layout_marginBottom="536dp"
      android:autofillHints=""
      android:background="@drawable/edittext_round"
      android:ems="10"
      android:hint="@string/license_number"
      android:textColorHint="@color/black"
      android:textColor="@color/black"
      android:inputType="textPersonName"
      android:paddingStart="10dp"
      android:paddingEnd="2dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.596"

      app:layout_constraintStart_toStartOf="parent" />

  <EditText
      android:id="@+id/ShopAddress"
      android:layout_width="354dp"
      android:layout_height="52dp"
      android:layout_marginBottom="464dp"
      android:autofillHints="no"
      android:background="@drawable/edittext_round"
      android:ems="10"
      android:hint="@string/shop_address"
      android:textColor="@color/black"
      android:textColorHint="@color/black"
      android:importantForAutofill=""
      android:inputType="textPostalAddress"
      android:paddingStart="10dp"
      android:paddingEnd="2dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"

      app:layout_constraintHorizontal_bias="0.596"
      app:layout_constraintStart_toStartOf="parent" />

  <EditText
      android:id="@+id/EmailAddress"
      android:layout_width="354dp"
      android:layout_height="52dp"
      android:layout_marginBottom="400dp"
      android:background="@drawable/edittext_round"
      android:ems="10"
      android:hint="@string/enter_email_id"
      android:importantForAutofill="no"
      android:inputType="textEmailAddress"
      android:paddingStart="10dp"
      android:paddingEnd="2dp"
      android:textColor="@color/black"
      android:textColorHint="@color/black"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.596"
      app:layout_constraintStart_toStartOf="parent" />

  <com.google.android.material.textfield.TextInputLayout
      android:layout_width="354dp"
      android:layout_height="52dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.596"
android:textColorHint="@color/black"
      android:background="@drawable/edittext_round"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.53"
      app:passwordToggleEnabled="true">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Password"
        android:layout_width="354dp"
        android:layout_height="52dp"
        android:background="@drawable/edittext_round"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:paddingEnd="2dp"
        android:paddingStart="10dp" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:layout_width="354dp"
      android:layout_height="52dp"
      android:textColorHint="@color/black"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.596"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.627"
      app:passwordToggleEnabled="true">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ConfirmPassword"
        android:layout_width="354dp"
        android:layout_height="52dp"
        android:background="@drawable/edittext_round"
        android:ems="10"
        android:textColor="@color/black"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingEnd="2dp"
        android:paddingStart="10dp" />
  </com.google.android.material.textfield.TextInputLayout>

  <EditText
      android:id="@+id/PhoneNumber"
      android:layout_width="354dp"
      android:layout_height="52dp"
      android:layout_marginBottom="188dp"
      android:background="@drawable/edittext_round"
      android:ems="10"
      android:hint="@string/phone_number"
      android:importantForAutofill="no"
      android:inputType="phone"
      android:paddingStart="10dp"
      android:paddingEnd="2dp"
      android:textColor="@color/black"
      android:textColorHint="@color/black"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.596"

      app:layout_constraintStart_toStartOf="parent" />

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/btnRegister"
      android:layout_width="354dp"
      android:layout_height="52dp"
      android:layout_marginBottom="108dp"
      android:background="@drawable/button_round1"
      android:text="@string/register"
      android:textColor="@color/white"
      android:textSize="18sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.596"
      app:layout_constraintStart_toStartOf="parent" />

  <TextView
      android:id="@+id/textView7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/already_have_account"
      android:textColor="@color/orange"
      android:textSize="18sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.155"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btnRegister"
      app:layout_constraintVertical_bias="0.166" />

  <TextView
      android:id="@+id/login"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/login"
      android:textColor="@color/white"
      android:textSize="18sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.69"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.91" />

  <TextView
      android:id="@+id/textView13"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/shopkeeper_registration1"
      android:textColor="@color/orange"
      android:textSize="25sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.418"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.022" />


</androidx.constraintlayout.widget.ConstraintLayout>