<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerLoginActivity"
    android:background="#494dcd"
    android:padding="5dp">


  <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/edtEmailID"
      android:layout_width="370dp"
      android:layout_height="60dp"
      android:autofillHints=""
      android:textColor="@color/black"
      android:padding="10dp"
      android:textColorHint="@color/black"
      android:background="@drawable/edittext_round"
      android:ems="10"
      android:hint="@string/enter_email_id"
      android:paddingStart="15sp"
      android:inputType="textEmailAddress"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.487"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.384" />

  <com.google.android.material.textfield.TextInputLayout
      android:layout_width="371dp"
      android:layout_height="57dp"
      android:textColorHint="@color/black"
      android:layout_marginTop="10dp"
      android:background="@drawable/edittext_round"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.475"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.509"
      app:passwordToggleEnabled="true">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtPassword"
        android:layout_width="376dp"
        android:layout_height="57dp"
        android:textSize="18dp"
        android:textColorHint="@color/black"
        android:textColor="#101010"
        android:background="@drawable/edittext_round"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />
  </com.google.android.material.textfield.TextInputLayout>

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/btnLogin"
      android:layout_width="364dp"
      android:layout_height="52dp"
      android:background="@drawable/button_round1"
      android:text="@string/login"
      android:textColorHint="@color/black"
      android:textColor="@color/black"
      android:textSize="18sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.646" />

  <TextView
      android:id="@+id/textView2"
      android:layout_width="180dp"
      android:layout_height="24dp"
      android:layout_marginBottom="1sp"
      android:text="@string/not_registered"
      android:textColor="#ff927b"
      android:textSize="18sp"
      android:visibility="visible"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.092"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btnLogin"
      app:layout_constraintVertical_bias="0.078" />

  <TextView
      android:id="@+id/register"
      android:layout_width="108dp"
      android:layout_height="136dp"
      android:text="@string/register"
      android:textColor="@color/white"
      android:textSize="18sp"
      android:textStyle="bold"
      android:visibility="visible"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.492"
      app:layout_constraintStart_toEndOf="@+id/textView2"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.85" />

  <TextView
      android:id="@+id/textView5"
      android:layout_width="186dp"
      android:layout_height="26dp"
      android:text="@string/forget_password"
      android:textColor="#ff927b"
      android:textSize="18sp"
      android:visibility="visible"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.088"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.764" />

  <TextView
      android:id="@+id/TxtReset"
      android:layout_width="150dp"
      android:layout_height="27dp"
      android:text="@string/reset_password"
      android:textColor="@color/white"
      android:textSize="18sp"
      android:textStyle="bold"
      android:visibility="visible"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.961"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.759" />

  <TextView
      android:id="@+id/textView10"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/customer_login"
      android:textColor="@color/orange"
      android:textSize="30sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.086" />


</androidx.constraintlayout.widget.ConstraintLayout>