<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    android:layout_height="match_parent"

    tools:context=".viewInventoryActivity">
  <LinearLayout
      android:layout_width="match_parent"
     android:background="@color/light_blue"
      android:layout_marginTop="14dp"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_of_products"
        android:textColor="@color/black"
        android:id="@+id/viewInventory"
        android:padding="5dp"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:background="@color/light_blue"
        android:textSize="20sp"
        android:layout_marginStart="3dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FC0703"
        android:id="@+id/totalnoitem"
        android:text="@string/_0"
        android:textSize="20sp"
        android:textStyle="bold"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/total_sum"
        android:background="@color/light_blue"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:textStyle="bold"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FC0703"
        android:id="@+id/totalsum"
        android:text="@string/_0"
        android:textSize="20sp"
        android:textStyle="bold"

        />


  </LinearLayout>

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recyclerViews"
      android:layout_width="match_parent"
      android:background="@color/blue"
      android:layout_height="match_parent"
      android:layout_marginTop="20dp">

  </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>